--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 { head: 'Campeão', cl: 'num', html: ƒ('winner', percent())}
             ];
 
+            var sortAscending = true;
             var keys = [
                 { head: 'flag', cl: 'center', html: ƒ('flagA')},
                 { head: 'team', cl: 'center', html: ƒ('team')},
