--- a/index.html
+++ b/index.html
@@ -11,6 +11,30 @@
     th, td { padding: 0 2em 1.5ex 0;}
     th.center, td.center { text-align: center; }
     th.num, td.num { text-align: right; }
+    table th:nth-child(1){
+       width: 30px;
+     }
+    table th:nth-child(2){
+       width: 30px;
+     }
+            table th:nth-child(3){
+       width: 110px;
+     }
+            table th:nth-child(4){
+       width: 50px;
+     }
+            table th:nth-child(5){
+       width: 50px;
+     }
+            table th:nth-child(6){
+       width: 50px;
+     }
+            table th:nth-child(7){
+       width: 50px;
+     }
+            table th:nth-child(8){
+       width: 50px;
+     }
     </style>
 </head>
 <body>
