--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
      }
     table th:nth-child(2){
        width: 110px;
+	    text-align: left;
      }
             table th:nth-child(3){
        width: 50px;
