--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
      }
     table th:nth-child(2){
        width: 110px;
-	    text-align: left;
+     }
+	        table td:ntd-child(2){
+       text-align: left;
      }
             table th:nth-child(3){
        width: 50px;
