--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     table th:nth-child(2){
        width: 110px;
      }
-	        table td:ntd-child(2){
+	        table td:nth-child(2){
        text-align: left;
      }
             table th:nth-child(3){
