--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     th, td { padding: 0 2em 1.5ex 0;}
     th.center, td.center { text-align: center; }
     th.num, td.num { text-align: right; }
+    th, td {
+    border-bottom: 1px solid #ddd;
+}
     table th:nth-child(1){
        width: 30px;
      }
