--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     th, td { padding: 0 0em 0ex 0;}
     th.center, td.center { text-align: center; }
     th.num, td.num { text-align: center; }
+    tr:hover {background-color: #f5f5f5;}
     th, td {
     border-bottom: 1px solid #ddd;
 }
@@ -24,22 +25,22 @@
        text-align: left;
      }
             table th:nth-child(3){
-       width: 50px;
+       width: 70px;
      }
             table th:nth-child(4){
-       width: 50px;
+       width: 70px;
      }
             table th:nth-child(5){
-       width: 50px;
+       width: 70px;
      }
             table th:nth-child(6){
-       width: 50px;
+       width: 70px;
      }
             table th:nth-child(7){
-       width: 50px;
+       width: 70px;
      }
             table th:nth-child(8){
-       width: 50px;
+       width: 70px;
      }
     </style>
 </head>
