--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     th, td { padding: 0 0em 0ex 0;}
     th.center, td.center { text-align: center; }
     th.num, td.num { text-align: center; }
-    td:hover {background-color: #f5f5f5;}
+    th:hover {background-color: #f5f5f5;}
     th, td {
     border-bottom: 1px solid #ddd;
 }
