--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     th, td {
     border-bottom: 1px solid #ddd;
 }
+    th {
+    background-color: #004481;
+    color: white;
+}   
+	    
     table th:nth-child(1){
        width: 30px;
      }
