--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     tr:hover {background-color: #f5f5f5;}
     th, td {
     border-bottom: 1px solid #ddd;
+    border-right: 0px;
 }
 //    th {
 //    background-color: #004481;
