--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <style type="text/css">
     body { font-family: 'Helvetica Neue', Helvetica; font-weight: 300; padding: 20px;}
     th { text-align: left; }
-    th, td { padding: 0.5 0.5em 0ex 0;}
+    th { padding: 0.5 0.5em 0.5ex 0.5;}
+    td { padding: 0.5 0.5em 0ex 0;}
     th.center, td.center { text-align: center; }
     th.num, td.num { text-align: center; }
     tr:hover {background-color: #f5f5f5;}
