--- a/index.html
+++ b/index.html
@@ -12,41 +12,44 @@
     td { padding: 0.5 0.5em 0ex 0;}
     th.center, td.center { text-align: center; }
     th.num, td.num { text-align: center; }
+//defining colors
     tr:hover {background-color: #f5f5f5;}
     th, td {
     border-bottom: 1px solid #ddd;
-    border-right: 0px;
+    border-right: 1px solid #ddd;
 }
-//    th {
-//    background-color: #004481;
-//    color: white;
-//}   
-	    
+    th {
+    background-color: #004481;
+    color: white;
+}   
+
+//defining column width
     table th:nth-child(1){
        width: 30px;
      }
     table th:nth-child(2){
        width: 110px;
      }
-	        table td:nth-child(2){
+//defining text align
+    table td:nth-child(2){
        text-align: left;
      }
-            table th:nth-child(3){
+    table th:nth-child(3){
        width: 70px;
      }
-            table th:nth-child(4){
+    table th:nth-child(4){
        width: 70px;
      }
-            table th:nth-child(5){
+    table th:nth-child(5){
        width: 70px;
      }
-            table th:nth-child(6){
+    table th:nth-child(6){
        width: 70px;
      }
-            table th:nth-child(7){
+    table th:nth-child(7){
        width: 70px;
      }
-            table th:nth-child(8){
+    table th:nth-child(8){
        width: 70px;
      }
     </style>
