--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     tr:hover {background-color: #f5f5f5;}
     th, td {
     border-bottom: 1px solid #ddd;
-    border-right: 1px solid #ddd;
+    border-collapse: collapse;
 }
     th {
     background-color: #004481;
