--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style type="text/css">
     body { font-family: 'Helvetica Neue', Helvetica; font-weight: 300; padding: 20px;}
     th { text-align: left; }
-    th { padding: 0.5 0.5em 2ex 2;}
+    th { padding: 0.5 0.5em 0ex 0;}
     td { padding: 0.5 0.5em 0ex 0;}
     th.center, td.center { text-align: center; }
     th.num, td.num { text-align: center; }
@@ -21,6 +21,8 @@
     th {
     background-color: #004481;
     color: white;
+    padding-top: 6px;
+    padding-bottom: 6px;
 }   
 
 //defining column width
