--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <style type="text/css">
     body { font-family: 'Helvetica Neue', Helvetica; font-weight: 300; padding: 20px;}
     th { text-align: left; }
-    th { padding: 0.5 0.5em 0ex 0;}
-    td { padding: 0.5 0.5em 0ex 0;}
+    td, th { padding: 0.5 0.5em 0ex 0;}
     th.center, td.center { text-align: center; }
     th.num, td.num { text-align: center; }
 //defining colors
