--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
             var table = d3.select('body')
                 .append('table');
 
+        <caption>Monthly savings</caption>
+        
             // Criando cabecalho
             table.append('thead').append('tr')
                 .selectAll('th')
