--- a/index.html
+++ b/index.html
@@ -99,21 +99,8 @@
                 .data(headers).enter()
                 .append('th')
                 .attr('class', ƒ('cl'))
-                .text(ƒ('head'))
-                .on('click', function (d) {
-                  headers.attr('class', 'header');
-		                	   
-		          if (sortAscending) {
-		            rows.sort(function(a, b) { return b[d] < a[d]; });
-		            sortAscending = false;
-		            this.className = 'aes';
-		          } else {
-		            rows.sort(function(a, b) { return b[d] > a[d]; });
-		            sortAscending = true;
-		            this.className = 'des';
-		          }
-		                	   
-		    });
+                .text(ƒ('head'));
+
 
             // Corpo da tabela
             table.append('tbody')
