--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
     table th:nth-child(8){
        width: 70px;
      }
+	th.des:after {
+      content: "\21E9";
+    }
+    
+    th.aes:after {
+      content: "\21E7";
+    }
+	    
     </style>
 </head>
 <body>
