--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     th {
     background-color: #004481;
     color: white;
+    cursor: s-resize;
     padding-top: 6px;
     padding-bottom: 6px;
 }   
