--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
     th.center, td.center { text-align: center; }
     th.num, td.num { text-align: center; }
     tr:hover {background-color: #f5f5f5;}
-    th, td {
-    border-bottom: 1px solid #ddd;
+    th {
+    border-bottom: 3px solid #ddd;
     border-collapse: collapse;
 }
+    td {
+    border-bottom: 1px solid #ddd;
+    border-collapse: collapse;
+}	    
     th {
     background-color: #004481;
     color: white;
