--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     border-collapse: collapse;
 }	    
     th {
+    background-color: #ffffff;	    
     padding-top: 6px;
     padding-bottom: 6px;
 }   
