--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     padding-top: 6px;
     padding-bottom: 6px;
 }   
-
     table th:nth-child(1){
+       column-span: 2;
        width: 30px;
      }
     table th:nth-child(2){
@@ -138,6 +138,5 @@
         })
     </script>
 	
-    <th colspan="3">TOTAL</th>
 </body>
 </html>
