--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style type="text/css">
     body { font-family: 'Helvetica Neue', Helvetica; font-weight: 300; padding: 20px;}
     th { text-align: left; }
-    td, th { padding: 0 0em 1.5ex 1.5;}
+    td, th { padding: 0 0em 0ex 0;}
     th.center, td.center { text-align: center; }
     th.num, td.num { text-align: center; }
     tr:hover {background-color: #f5f5f5;}
@@ -34,6 +34,7 @@
      }
     table td:nth-child(2){
        text-align: left;
+       padding-left: 6px;
      }
     table th:nth-child(3){
        width: 80px;
