--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             // column definitions OK!
             var headers = [
                 { head: '', cl: 'center', html: ƒ('flag')},
-                { head: 'Time', cl: 'center', html: ƒ('team')},
+                { head: 'Seleção', cl: 'center', html: ƒ('team')},
                 { head: 'Grupo', cl: 'center', html: ƒ('group')},
                 { head: 'Oitavas', cl: 'num', html: ƒ('eight', percent())},
                 { head: 'Quartas', cl: 'num', html: ƒ('quarter', percent())},
