--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         	console.log(data);
             // column definitions OK!
             var headers = [
-                { head: '', cl: 'center', html: ƒ('flag')},
-                { head: 'Seleção', cl: 'center', html: ƒ('team')},
+                { head: 'Seleção', cl: 'center', html: ƒ('flag')},
+                { head: '', cl: 'center', html: ƒ('team')},
                 { head: 'Grupo', cl: 'center', html: ƒ('group')},
                 { head: 'Oitavas', cl: 'num', html: ƒ('eight', percent())},
                 { head: 'Quartas', cl: 'num', html: ƒ('quarter', percent())},
@@ -100,7 +100,9 @@
                 .data(headers).enter()
                 .append('th')
                 .attr('class', ƒ('cl'))
-                .text(ƒ('head'));    
+                .text(ƒ('head'))
+	    .document.getElementById("table").rows[0].cells[0].colSpan = "2"
+;        
         
             // Corpo da tabela
             table.append('tbody')
