--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 .append('th')
                 .attr('class', ƒ('cl'))
                 .text(ƒ('head'))
-	    .document.getElementById("table").rows[1].cells[1].colSpan = "2"
+	    .rows[1].cells[1].colSpan = "2"
 ;        
         
             // Corpo da tabela
