--- a/index.html
+++ b/index.html
@@ -100,9 +100,7 @@
                 .data(headers).enter()
                 .append('th')
                 .attr('class', ƒ('cl'))
-                .text(ƒ('head'))
-	    .rows[1].cells[1].colSpan = "2"
-;        
+                .text(ƒ('head'));        
         
             // Corpo da tabela
             table.append('tbody')
