--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     padding-bottom: 6px;
 }   
     table th:nth-child(1){
-       column-span: 2;
+       colspan: 2;
        width: 30px;
      }
     table th:nth-child(2){
