--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         	console.log(data);
             // column definitions OK!
             var headers = [
-                { head: '    Seleção', cl: 'center', html: ƒ('flag')},
-                { head: '', cl: 'center', html: ƒ('team')},
+                { head: '', cl: 'center', html: ƒ('flag')},
+                { head: '    Seleção', cl: 'center', html: ƒ('team')},
                 { head: 'Grupo', cl: 'center', html: ƒ('group')},
                 { head: 'Oitavas', cl: 'num', html: ƒ('eight', percent())},
                 { head: 'Quartas', cl: 'num', html: ƒ('quarter', percent())},
