--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <script src='jetpack-starter-kit.js'></script>
     <style type="text/css">
     body { font-family: 'Helvetica Neue', Helvetica; font-weight: 300; padding: 20px;}
-    table {border-collapse: collapse; margin: auto; width: 600px; height: auto;}
+    table {border-collapse: collapse; margin: auto;}
+    tr {line-height: 15px;} /*Change row height*/
     th { text-align: left; }
     td, th { padding: 0 0em 0ex 0;}
     th.center, td.center { text-align: center; }
