--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     td, th { padding: 0 0em 0ex 0;}
     th.center, td.center { text-align: center; }
     th.num, td.num { text-align: center; }
+    th {cursor: s-resize; }
     tr:hover {background-color: #f5f5f5;}
     th {
     border-bottom: 3px solid #ddd;
