--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             var f = d3.f;
             var color = d3.scale.linear()
                             .domain([0,100])
-                            .range(['white',#55AE3A]);
+                            .range(['white','#55AE3A']);
 
             var sortAscending = true;
             // column definitions OK!
