--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     th {cursor: s-resize; }
     tr:hover {background-color: #f5f5f5;}
     th {
-    border-bottom: 3px solid #ddd;
+    border-bottom: 3px solid black;
     border-collapse: collapse;
 }
     td {
