--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <script src="https://d3js.org/d3.v3.min.js"></script>
     <script src='jetpack-starter-kit.js'></script>
     <style type="text/css">
-    body { font-family: 'Helvetica Neue', Helvetica; font-weight: 300; padding: 20px;}
+    body { font-family: 'Helvetica Neue', Helvetica; font-weight: 300;}
     table {border-collapse: collapse; margin: auto;}
     tr {line-height: 15px;} /*Change row height*/
     th { text-align: left; }
-    td, th { padding: 0 0em 0ex 0;}
+    td, th { padding: 2px; font-size: 12px;}
     th.center, td.center { text-align: center; }
     th.num, td.num { text-align: center; }
     th {cursor: s-resize; }
@@ -68,13 +68,12 @@
 </head>
 <body>
     <script>
-    d3.json("knockout_data2.json", function(data)
+    d3.json("knockout_data.json", function(data)
         {
             var f = d3.f;
             var color = d3.scale.linear()
                             .domain([0,100])
                             .range(['white','#55AE3A']);
-
             var sortAscending = true;
             // column definitions OK!
             var headers = [
@@ -88,7 +87,7 @@
                 { head: 'Campeão', cl: 'num', html: ƒ('winner', percent()), id: 'winner', cols: 1}
             ];
             var keys = [
-                { head: 'flag', cl: 'center', html: ƒ('flag')},
+                { head: 'flag', cl: 'center', html: f('flag', input_img())},
                 { head: 'team', cl: 'center', html: ƒ('team')},
                 { head: 'group', cl: 'center', html: ƒ('group')},
                 { head: 'eight', cl: 'num', html: ƒ('eight', percent())},
@@ -113,7 +112,6 @@
                 .on('click', function (d) {
                                     var k = this.id;
                                     sortable = ['team','group','eight','quarter', 'semi', 'final','winner'];
-
                                     if (sortable.includes(k)) {
                                         theaders.attr('class', f('cl'));
                                         if (['team', 'group'].includes(k)) {
@@ -143,7 +141,6 @@
             var rows = table.append('tbody').selectAll('tr')
                         .data(data).enter()
                         .append('tr');
-
             rows.selectAll('td')
             .data(function(row, i) {
                 return keys.map(function(c) {
@@ -170,7 +167,11 @@
         // Cover percentage
         function percent() {
             return function(f) { return 100*f>1? Math.floor(100 * f) % 100 + '%' : '<1%'; };
-        }
+        };
+        // A partir do nome do pais, retorna a bandeira
+        function input_img() {
+          return function(country) { return "<img src='https://raw.githubusercontent.com/lucasnoveline/worldcup2018/master/flags32/" + country +".png' width='24' height='24'>"; }
+        };
         })
     </script>
     
