--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             
         // Cover percentage
         function percent() {
-            return function(f) { return 100*f>1? Math.floor(100 * f) % 100 + '%' : '<1%'; };
+            return function(f) { return 100*f>1? Math.round(100 * f) % 100 + '%' : '<1%'; };
         };
         // A partir do nome do pais, retorna a bandeira
         function input_img() {
